# aux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
src/: cli.rs  config.rs  config_cmd.rs  error.rs  interactive.rs  main.rs  util.rs
src/ai/: chat.rs  mod.rs  transcript.rs
src/commands/: mod.rs  playback.rs  stats.rs
src/media/: mod.rs  source.rs  types.rs  ytdlp.rs
src/player/: mod.rs  mpv.rs  queue_manager.rs  remote.rs  state.rs  types.rs
src/tui/: app.rs  ui.rs
src/youtube/: mod.rs  types.rs  ytdlp.rs
