[package]
name = "duet"
version = "0.1.0"
edition = "2021"
description = "CLI YouTube player with AI companion"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Terminal UI (Phase 1: basic)
crossterm = "0.28"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"

# Paths
directories = "5"

# Graceful shutdown
ctrlc = "3"

# HTTP client (Phase 2: AI)
reqwest = { version = "0.12", features = ["json"] }

# Database (Phase 3: Library)
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

# TUI (Phase 4)
ratatui = "0.29"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
